--- a/login.css
+++ b/login.css
@@ -197,7 +197,7 @@ select:not(:-internal-list-box) {
     outline: 0;
     overflow: hidden;
     text-overflow: ellipsis;
-    /* border: 1 solid black; */
+    border: 1px solid #dbdbdb;
 }
 
 /* show & login in button ----------------- */
@@ -238,9 +238,10 @@ select:not(:-internal-list-box) {
     position: relative;
 }
 /* log in button */
-.loginButton:not(.showLoginFbButton), a.loginButton:not(.showLoginFbButton), a.loginButton:not(.showLoginFbButton):visited {
+#loginButton {
     border: 1px solid transparent;
     background-color: #0095f6;
+    opacity: 0.3;
 }
 /* login & login with fb button position */
 .loginAndFbLoginPosition {
@@ -292,6 +293,16 @@ select:not(:-internal-list-box) {
 .loginWFbFont {
     color: #385185;
     font-weight: 1200;
+}
+
+/* incorrect. Please double-check ----------------- */
+.incorrectInfo {
+    color: #ed4956;
+    margin: 10px 40px;
+    font-size: 14px;
+    line-height: 18px;
+    text-align: center;
+    display: none;
 }
 
 /* forgot password ----------------- */
@@ -404,6 +415,24 @@ select:not(:-internal-list-box) {
     margin-left: 16px;
 }
 
+/* login Show & Hide --------------------- */
+/* password layout */
+#key {
+    width: 220px;
+    border: 1px solid #dbdbdb;
+    padding: 14px 36px 3px 10px!important;
+}
+/* login Show & Hide */
+#keyShow {
+    display: none;
+    margin-left: -40px;
+    margin-top: 5px;
+    font-size: 14px;
+    font-weight: 600;
+    cursor: pointer;
+    opacity: 0.6;
+}
+
 
 /* =========== Desktop verstion =========== */
 
@@ -427,6 +456,7 @@ select:not(:-internal-list-box) {
     }
     /* size of the moveable pics */
     .sizeMovePic {
+        background-image: url(images/4.jpg);
         height: 427px;
         left: 0;
         opacity: 0;
@@ -437,6 +467,16 @@ select:not(:-internal-list-box) {
         /* to show the moveable pics */
         opacity: 1;
         visibility: visible;
+        /* transition: 1.5s ease-out; */
+        /* animation: sizeMovePic 3s infinite linear; */
+        animation: bg-img 24s infinite ease-out;
     }
- 
+      @keyframes bg-img {
+        20% { background-image: url("images/1.jpg"); }	
+        40% { background-image: url("images/2.jpg"); }	
+        60% { background-image: url("images/3.jpg"); }
+        80% { background-image: url("images/5.jpg"); }	
+       }
+      /* http://css3.bradshawenterprises.com/cfimg/ */
+      /* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Transitions/Using_CSS_transitions */
 }
