--- a/login.css
+++ b/login.css
@@ -169,30 +169,46 @@ select:not(:-internal-list-box) {
 }
 /* id & pw span ajustment */
 .idPwSpanAjust {
-    display: none;
     color: #8e8e8e;
     font-size: 11px;
     left: 8px;    
     position: absolute;
-    /* line-height: 36px; */
-
-    /* height: 36px;
-     
-    overflow: hidden;
-    pointer-events: none; */
-    /* span text into input box */
-    /* right: 0;
-    text-overflow: ellipsis;
-    transform-origin: left; */
-    /* transition: ease-out; */
-    /* user-select: none; */
-    /* 생략되면 ...표시 */
-    /* white-space: nowrap; */
+    top: 12px;
 }
 
-#idPwSpanAjustTyped { 
-    display: none;
-    line-height: 21px; 
+.pwSpanAjust {
+    color: #8e8e8e;
+    font-size: 11px;
+    left: 8px;    
+    position: absolute;
+    top: 12px;
+}
+
+.idPwSpanAjust.--focusStyle {
+    color: #8e8e8e;
+    font-size: 10px;
+    left: 8px;  
+    position: absolute;
+    padding-bottom: 5px;
+    top: 0;
+}
+
+.pwSpanAjust.--pwFocusStyle {
+    color: #8e8e8e;
+    font-size: 10px;
+    left: 8px;  
+    position: absolute;
+    padding-bottom: 5px;
+    top: 0;
+}
+
+.focusStyle.--pwFocusStyle {
+    color: #8e8e8e;
+    font-size: 10px;
+    left: 8px;  
+    position: absolute;
+    padding-bottom: 5px;
+    top: 0;
 }
 
 /* id & pw input box ajustment */
@@ -237,10 +253,11 @@ select:not(:-internal-list-box) {
     text-overflow: ellipsis;
     user-select: none;
     width: auto;
+    border: 0!important;
 }
 /* show & login with fb button border */
 .showLoginFbButton, .showLoginFbButton:visited, a.showLoginFbButton, a.showLoginFbButton:visited {
-    border: 0;
+    border: 0!important;
     display: inline;
     padding: 0;
     position: relative;
@@ -257,6 +274,12 @@ select:not(:-internal-list-box) {
     background-color: #0095f6;
     opacity: 0.3;
 }
+
+#loginButton:active {
+    opacity: 0.6!important;
+}
+/* https://www.w3schools.com/css/css3_buttons.asp */
+
 /* login & login with fb button position */
 .loginAndFbLoginPosition {
     margin: 8px 40px;
@@ -327,6 +350,7 @@ select:not(:-internal-list-box) {
     line-height: 16px;
     margin-top: 12px;
     text-align: center;
+    border: 0!important;
 }
 
 /* sign up ----------------- */
@@ -432,7 +456,7 @@ select:not(:-internal-list-box) {
 /* login Show & Hide --------------------- */
 /* password layout */
 #key {
-    width: 220px;
+    width: 221px;
     border: 1px solid #dbdbdb;
     padding: 9px 36px 3px 8px!important;
 }
@@ -440,11 +464,11 @@ select:not(:-internal-list-box) {
 #keyShow {
     display: none;
     margin-left: -40px;
-    margin-top: 5px;
+    /* margin-top: 5px;
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 600; */
     cursor: pointer;
-    opacity: 0.6;
+    /* opacity: 0.6; */
 }
 
 
