--- a/main.css
+++ b/main.css
@@ -131,7 +131,7 @@ li.iconsLi span {
     border-radius: 3px;
     margin-bottom: 24px;
     margin-top: 0;
-    padding: 16px 0;
+    padding: 13px 0;
     width: 614px;
     height: 119px;
     font-size: 12px;
@@ -143,7 +143,7 @@ li.iconsLi span {
 }
 .storyMoveBefore, .storyMoveNext, .postMoveBefore, .postMoveNext {
     position: absolute;
-    background-image: url(/images/images.png);
+    background-image: url(images/images.png);
     background-repeat: no-repeat;
     height: 28px;
     width: 29px;
@@ -151,10 +151,13 @@ li.iconsLi span {
     z-index: 1;
     border-radius: 18px;
     box-shadow: 0 2px 8px rgba(0,0,0,.1);
+    /* botton 배경색 투명 */
+    background-color: transparent;
 }
 .storyMoveBefore, .postMoveBefore {
     background-position: -130px -99px;
     left: 11px;
+    /* display: none; */
 }
 .storyMoveNext, .postMoveNext {
     background-position: -162px -99px;
@@ -164,14 +167,15 @@ li.iconsLi span {
 .before {
     position: absolute;
     bottom: 61%;
+    display: none;
 }
 .next {
     position: absolute;
     left: 574px;
     bottom: 61%;
+    display: block;
 }
 .friendStory {
-    padding: 3px 0;
     height: 83px;
     width: 70px;
     margin-left: 10px;
@@ -185,6 +189,10 @@ li.iconsLi span {
     overflow-y: hidden;
     display: flex;
     position: absolute;
+    left: 0px;
+    /* 자연스런 스크롤바 움직임
+     https://webisfree.com/2019-12-19/[css]-%EC%8A%A4%ED%81%AC%EB%A1%A4-%EC%9D%B4%EB%8F%99-%EC%95%A0%EB%8B%88%EB%A9%94%EC%9D%B4%EC%85%98-%EC%86%8D%EC%84%B1-scroll-behavior#abc */
+    scroll-behavior: smooth;
 }
 /* 가로 스크롤바 없애기 */
 ::-webkit-scrollbar {
@@ -216,7 +224,12 @@ li.iconsLi span {
     overflow: hidden;
     margin: 1px 0 5px 2px;
 }
-
+.dashboard {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    /* 출처: https://pureainu.tistory.com/273 [L.E.T]; */
+}
 .peoplePost {
     background: #fff;
     border: 1px solid #dbdbdb;
@@ -265,7 +278,7 @@ span.postMore {
     display: flex;
 }
 .postPicBorder {
-    background-image: url(/images/mainImages/pictureBorderSmall.png);
+    background-image: url(images/mainImages/pictureBorderSmall.png);
     background-repeat: no-repeat;
     background-size: 35px;
     position: absolute;
@@ -290,11 +303,13 @@ span.postMore {
     position: absolute;
     bottom: 54%;
     /* 이전, 다음 버튼 중앙정렬위함 */
+    display: none;
 }
 .postNext {
     position: absolute;
     left: 93%;
     bottom: 54%;
+    display: block;
 }
 /* The dots/bullets/indicators */
 .dot {
@@ -355,9 +370,19 @@ span.userCommentsList {
     margin: 0!important;
     padding: 0! important;
 }
-span.commentSpan {
-    margin: 5px 382px 5px 0;
+/* https://golmaru.tistory.com/15 
+span 태그는 inline element이기 때문에 공간을 차지하지 않는다. 
+그래서 width를 준다는 건 상식적으로 맞지 않는 속성이다
 
+inline element 를 block element로 변경하려면
+style 속성 중 display 값을 inline-block 으로 설정하면 된다.
+*/
+span.commentSpan {
+    display: inline-block;
+    width: 454px;
+}
+.smallHeart {
+    margin: 5px;
 }
 .notC {
     color: #8e8e8e;
@@ -406,6 +431,9 @@ span.postBtn button {
     font-weight: bold;
     height: 27px;
     font-size: 19px;
+}
+button.addSubmit.addSumitActive {
+    opacity: 0.6;
 }
 .secondTop {
     padding-right: 20px;
@@ -462,6 +490,7 @@ p.followByInfo {
 }
 .suggestInfoSize {
     margin: 2px;
+    width: 167px;
 }
 .suggestInfoSize p {
     padding: 3px;
