--- a/reset.css
+++ b/reset.css
@@ -68,3 +68,13 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+/* 
+크롬에서 Input, Textarea 클릭 포커싱 시 생기는 파란색 테두리 없애는 방법
+https://www.wrapuppro.com/programing/view/rjOcbTUfVTZgf5A
+*/
+input:focus {
+    outline: none;
+}
+textarea:focus {
+    outline: none;
+}
