--- a/main.css
+++ b/main.css
@@ -121,7 +121,7 @@ li.searchLi {
   }
 li.iconsLi {
     width: 334px;
-    argin-left: 75px;
+    margin-left: 75px;
 }
 .iconsDiv span {
     padding: 0 20px;
@@ -650,6 +650,39 @@ span.suggestMore {
     }
     ul.headerNav {
         width: 100%;
+    }
+}
+@media only screen and (max-width: 360px) {
+
+    /* main phone instagram app picture */
+    .secondTop {
+        display: none;
+    }
+    .mainTop {
+        padding-top: 60px;
+    }
+    li.searchLi {
+        display: none;
+    }
+    ul.headerNav {
+        width: 100%;
+    }
+    li.logoLi {
+        text-align: left;
+    }
+    li.iconsLi {
+        width: 335px;        
+    }
+    .mainDives {
+        display: flex;
+        justify-content: flex-start;
+        margin: 0;
+    }
+    .next {
+        left: 577px;
+    }
+    .contentsPosition1 {
+        background-color: #fafafa;
     }
 }
 
